--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.2.1",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
