--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/webpack-config": "^19.0.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "expo": "~52.0.37",
+    "expo-cli": "^6.3.10",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.1",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
     "react-native-zss-rich-text-editor": "^1.1.0"
   },
   "devDependencies": {
