--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export:web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "@expo/webpack-config": "^19.0.1",
+    "@expo/webpack-config": "^0.12.52",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "expo": "~52.0.37",
-    "expo-cli": "^6.3.10",
+    "expo-cli": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.1",
     "react": "18.3.1",
